--- a/ios-engineer.html
+++ b/ios-engineer.html
@@ -41,11 +41,11 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://pixelberry-studios.workable.com/j/56527C1D9B'>Pixelberry Studios - Jobs: Senior Platform Engineer - Top 25 Mobile Game - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Mountain View, California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://pixelberry-studios.workable.com/j/D7B9FDAE57'>Pixelberry Studios - Jobs: Senior Backend Engineer - Top 25 Mobile Game - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Mountain View, California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/peloton/jobs/1543686'>Job Application for iOS Mobile, Engineering Manager at Peloton</a></h5> 
@@ -72,7 +72,7 @@
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://duckduckgo.applytojob.com/apply/wCizWMj2uI/Senior-MacOSiOS-Engineer-Remote'>Senior macOS/iOS Engineer (Remote) - DuckDuckGo - Career Page</a></h5> 
+<h5><a href='http://duckduckgo.applytojob.com/apply/wCizWMj2uI/Senior-MacOSiOS-Engineer-Remote'>Senior macOS/iOS Engineer (Remote) - DuckDuckGo - Career Page</a></h5> 
 <p><span class="badge badge-light">Canada Italy</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -111,7 +111,7 @@ and at?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syone2.recruitee.com/o/ref-4722019-ios-engineer-lisbonporto'>
+<h5><a href='https://syone2.recruitee.com/o/ref-4722019-ios-engineer-lisbonporto'>
       (Ref. 472/2019) iOS Engineer (Lisbon/Porto) - Syone
     </a></h5> 
 <p><span class="badge badge-light">Lisbon</span></p>
@@ -121,7 +121,7 @@ and at?...</p>
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/onxsafwg'>Numbrs Personal Finance AG Careers - Senior iOS Engineer, Crypto</a></h5> 
+<h5><a href='https://jobs.jobvite.com/centralway/job/onxsafwg'>Numbrs Personal Finance AG Careers - Senior iOS Engineer, Crypto</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -153,7 +153,7 @@ and at?...</p>
 <p><span class="badge badge-light">Cluj-Napoca, Cluj County, Romania</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999691655908-ios-engineer'>Adevinta iOS engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999691655908-ios-engineer'>Adevinta iOS engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -205,7 +205,7 @@ project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tally/f0a28b54-9a7d-4876-952e-6eb7c947ea01'>Tally - Senior iOS Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/tally/f0a28b54-9a7d-4876-952e-6eb7c947ea01'>Tally - Senior iOS Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -251,16 +251,16 @@ project?...</p>
 <p><span class="badge badge-light">Melbourne</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/centralway/job/onxsafwg'>Numbrs Personal Finance AG Careers - Senior iOS Engineer, Crypto</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/centralway/job/onxsafwg'>Numbrs Personal Finance AG Careers - Senior iOS Engineer, Crypto</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 2, 2019 ... Join our dedicated technology team that builds massively scalable systems, 
 designs low latency architecture solutions and leverages machine learning?...</p>
 <hr/>
-<h5><a href='https://keywords-intl1.workable.com/j/626DE0F008'>Keywords Studios - Jobs: Service Line Operations Director - Engineering - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://keywords-intl1.workable.com/j/626DE0F008'>Keywords Studios - Jobs: Service Line Operations Director - Engineering - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://keywords-intl1.workable.com/j/9F9A8A210B'>Keywords Studios - Jobs: Service Line Operations Director - Engineering - Apply online</a></h5> 
+<h5><a href='https://keywords-intl1.workable.com/j/9F9A8A210B'>Keywords Studios - Jobs: Service Line Operations Director - Engineering - Apply online</a></h5> 
 <p><span class="badge badge-light">Dublin, County Dublin, Ireland</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -268,7 +268,7 @@ designs low latency architecture solutions and leverages machine learning?...</p
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999691713976-lead-ios-engineer-cash-app'>Square Lead iOS Engineer, Cash App | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999691713976-lead-ios-engineer-cash-app'>Square Lead iOS Engineer, Cash App | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Melbourne</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -350,7 +350,7 @@ and wearables, and translates these into activities and behavioural patterns.</p
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
-<h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/ios-software-engineer-ii-11570'>iOS Software Engineer II - Akamai Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/ios-software-engineer-ii-11570'>iOS Software Engineer II - Akamai Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
@@ -358,7 +358,7 @@ and wearables, and translates these into activities and behavioural patterns.</p
 <p><span class="badge badge-light">Berlin, DE</span></p>
 <p>Posted on: 2019-07-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999691357160-sr-ios-engineer-for-global-sportswear-co-'>Aroghia Group Sr. iOS Engineer for Global Sportswear Co. | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999691357160-sr-ios-engineer-for-global-sportswear-co-'>Aroghia Group Sr. iOS Engineer for Global Sportswear Co. | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -370,7 +370,7 @@ and wearables, and translates these into activities and behavioural patterns.</p
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mastercard.wd1.myworkdayjobs.com/en-US/CorporateCareers/job/Dublin-Ireland/IOS-Developer--Software-Engineering_R-86314'>IOS Developer, Software Engineering</a></h5> 
+<h5><a href='https://mastercard.wd1.myworkdayjobs.com/en-US/CorporateCareers/job/Dublin-Ireland/IOS-Developer--Software-Engineering_R-86314'>IOS Developer, Software Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... we provide the tools. Senior Software Engineer - Open Banking | Dublin, Ireland 
 ... Senior Engineer, Software Engineering | Dublin, Ireland ? Senior Engineer?...</p>
@@ -392,7 +392,7 @@ they love. Our product combines data science, software engineering and UX?...</p
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/takescoop/d5c68ee6-c7bb-4a61-b41d-c5d469669976'>Scoop - Senior iOS Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/takescoop/d5c68ee6-c7bb-4a61-b41d-c5d469669976'>Scoop - Senior iOS Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
